changes on: simple_shell.1 simple_shell.md

--- a/simple_shell.1
+++ b/simple_shell.1
@@ -37,9 +37,9 @@ command and exit.
 \&.TP .B $ ./simple_shell script.sh Execute the commands in the
 script.sh file and exit.
 .PP
-\&.SH AUTHOR simple_shell was written by Graham & Eric.
+\&.SH AUTHOR simple_shell was written by Graham & Erick.
 .PP
-\&.SH COPYRIGHT Copyright (C) 2023 Graham & Eric.
+\&.SH COPYRIGHT Copyright (C) 2023 Graham & Erick.
 This is free software; see the source code for licensing information.
 There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A
 PARTICULAR PURPOSE.
